--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Nikolay.
 
 # Short bio or description (displayed in the header)
-description: Developer
+description: Developer thoughts
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/nyxz/nyxz.github.io/raw/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/750524?s=460&v=4
 
 #
 # Flags below are optional
@@ -21,13 +21,13 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: github.com/nyxz
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  twitter: _nyxz
+  stackoverflow: users/776546/nyxz # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
