--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: github.com/nyxz
+  github: nyxz
   instagram:
   linkedin:
   pinterest:
